--- a/src/UI/Modal/Modal.module.css
+++ b/src/UI/Modal/Modal.module.css
@@ -6,21 +6,37 @@
     bottom: 0;
     z-index: 100;
 
+    padding: 0 1em;
+
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 8px;
-
+    
     background-color: rgba(0,0,0,0.3);
 }
 
-.modal {
-    border-radius: 6px;
-    background: white;
-    padding: 1em;
+.modalWrapper {
     width: 400px;
     max-width: 100%;
     max-height: 100%;
+
+    display: flex;
+    align-items: stretch;
+}
+
+.modal {
+    display: flex;
+    flex-direction: column;
+
+    border-radius: 6px;
+    background: white;
+    margin: 1em 0;
+    padding: 1em;
+
+    max-width: 100%;
+    max-height: 100%;
+
+    box-sizing: border-box;
 }
 
 .modal h1 {
