--- a/src/UI/Modal/ModalFooter.module.css
+++ b/src/UI/Modal/ModalFooter.module.css
@@ -1,7 +1,13 @@
 .row {
-    margin-top: 16px;
+    flex-shrink: 0;
+    flex-grow: 0;
+
+    margin-top: 1em;
+    padding-top: 1em;
     display: flex;
     justify-content: flex-end;
+
+    border-top: 1px solid #eee;
 }
 
 .row > :not(:last-child) {
