--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,10 @@ body {
     overflow-x: hidden;
 }
 
+body.no-scroll {
+    overflow: hidden;
+}
+
 h1 {
     font-size: 3em;
 }
